--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,24 +6,24 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="https://www.shutterstock.com/image-vector/stock-marketfinancial-market-vector-illustration-600w-743601325.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Some representative placeholder content for the first slide.</p>
+        <h5>Marketing Digital</h5>
+        <p>1</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="https://www.shutterstock.com/image-vector/concept-computer-programming-developing-software-600w-2149658841.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Some representative placeholder content for the second slide.</p>
+        <h5>Introducción a la programación </h5>
+        <p>2</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="https://www.shutterstock.com/image-vector/financial-administration-concept-consulting-company-600w-1165064974.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
+        <h5>Administración de Empresas</h5>
+        <p>3</p>
       </div>
     </div>
   </div>
@@ -36,12 +36,33 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+<br>
+<section>
+  <div class="container">
+    <div class="row">
+<div *ngFor="let ruta of [1,2,3]" class="col-md-4">
+  <div class="card" style="width: 18rem;">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Título de la tarjeta</h5>
+      <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+      <a href="#" class="btn btn-primary">Ir a algún lugar</a>
+    </div>
+  </div>
+</div>
 
-  
+
+    </div>
+    </div>
+
+
+</section>
+
+<br>
 <footer>
-  <p>&copy; 2023 UMDC. Todos los derechos reservados.</p>
+  <p>&copy; 2023 CURSOPOLIS. Todos los derechos reservados.</p>
   <p>Kevin Raúl Casco Quinto</p>
-  <p>Teléfono: (123) 456-7890 | Correo electrónico: info@umdc.edu.ni.xxx</p>
+  <p>Teléfono: (123) 456-7890 | Correo electrónico: info@cursopolis.edu.ni.xxx</p>
   <div class="social-media">
     <a href="https://www.facebook.com/umdc.edu.ni" target="_blank"><i class="fab fa-facebook"></i></a>
     <a href="https://twitter.com/umdc_ni" target="_blank"><i class="fab fa-twitter"></i></a>
