--- a/src/app/pages/acercade/acercade.component.html
+++ b/src/app/pages/acercade/acercade.component.html
@@ -7,8 +7,8 @@
 
 	<div class="container mt-4">
 		<section>
-			<h1 class="text-center">Bienvenido a UMDC "Universidad Mundial de Cosas"</h1>
-			<p class="lead">En la Universidad Online UMDC, estamos comprometidos a proporcionar acceso gratuito a una amplia gama de cursos en línea. Nuestra misión es hacer que la educación sea accesible para todos, independientemente de su ubicación, edad o nivel de ingresos.</p>
+			<h1 class="text-center">Bienvenido a CURSOPOLIS</h1>
+			<p class="lead">En el equipo de CURSOPOLIS, estamos comprometidos a proporcionar acceso gratuito a una amplia gama de cursos en línea. Nuestra misión es hacer que la educación sea accesible para todos, independientemente de su ubicación, edad o nivel de ingresos.</p>
 			<p>Trabajamos con profesionales altamente calificados de diversas áreas para desarrollar y ofrecer cursos en línea de alta calidad. Todos nuestros cursos son gratuitos y están disponibles para cualquier persona con acceso a Internet.</p>
 		</section>
 
