--- a/src/app/pages/contacto/contacto.component.html
+++ b/src/app/pages/contacto/contacto.component.html
@@ -1,23 +1,29 @@
-<div class="container text-center">
+<div class="container">
     <div class="row">
+      
       <div class="col">
-        <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label" >Nombre</label>
-            <input type="nombre" class="form-control" id="exampleFormControlInput1" placeholder="Cristiano Ronaldo">
+        <form>
+          <div class="mb-3">
+            <label for="exampleInputname" class="form-label">Nombre</label>
+            <input type="name" class="form-control" id="exampleInputname" aria-describedby="nameHelp" placeholder="Ejemplo, Cristiano Ronaldo">
           </div>
           <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">Correo</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nombre@example.com">
+            <label for="exampleInputEmail1" class="form-label">Correo electrónico</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="nombre@email.com">
+            <div id="emailHelp" class="form-text">Nunca compartiremos su correo electrónico con nadie más.</div>
           </div>
-          <div class="mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+          <div class="form-group">
+            <label for="exampleFormControlTextarea1">Mensaje</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <br>
+          <button type="submit" class="btn btn-primary">Enviar</button>
+        </form>
       </div>
       <div class="col">
         
       </div>
     </div>
   </div>
+
 
