--- a/src/app/pages/sesion/sesion.component.html
+++ b/src/app/pages/sesion/sesion.component.html
@@ -1,5 +1,5 @@
 <head>
-	<title>Contacto</title>
+	<title>Iniciar Sesión</title>
 <!-- Enlace a los archivos de Bootstrap -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -7,29 +7,24 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 <body>
-<!-- Creación del formulario de contacto -->
+<!-- Creación del formulario de inicio de sesion -->
 <div class="container">
   <div class="row">
     <div class="col-md-6 offset-md-3">
-      <h1 class="text-center mt-5 mb-4">Contactenos para resolver sus dudas</h1>
+      <h1 class="text-center mt-5 mb-4">Inicio de Sesión</h1>
       <form action="#" method="post">
-        <div class="form-group">
-          <label for="nombre">Nombre:</label>
-          <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Cristiano Ronaldo" required>
-        </div>
         <div class="form-group">
           <label for="email">Correo Electrónico:</label>
           <input type="email" class="form-control" id="email" name="email" placeholder="cr7@gmail.com" required>
         </div>
         <div class="form-group">
-          <label for="comentario">Comentario:</label>
-          <textarea class="form-control" id="comentario" name="comentario" rows="5" required></textarea>
-        </div>
+            <label for="password">Contraseña:</label>
+            <input type="password" class="form-control" id="passwordid" name="password" placeholder="12345" required>
+          </div>
         <button type="submit" class="btn btn-primary">Enviar</button>
       </form>
     </div>
   </div>
 </div>
 </body>
-
 
