--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -46,7 +46,7 @@
     <div class="card-body">
       <h5 class="card-title">{{curso.titulo}}</h5>
       <p class="card-text">{{curso.descripcion}}</p>
-      <a href="/cursos/{curso.id}" class="btn btn-primary">ver</a>
+      <a routerLink="/programacion" class="btn btn-primary">ver</a>
     </div>
   </div>
 </div>
