--- a/src/app/pages/sesion/sesion.component.html
+++ b/src/app/pages/sesion/sesion.component.html
@@ -26,5 +26,12 @@
     </div>
   </div>
 </div>
+
+<br>
+<div style="display: flex; justify-content: center; align-items: center;">
+    <img src="https://i.redd.it/uuns17z16la71.png" alt="Descripción de la imagen" style="width: 70%; height: auto;">
+  </div>
+  
+
 </body>
 
