--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -1,7 +1,10 @@
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Mi App</a>
+      <a class="navbar-brand" routerLink="/home">
+        <img src="https://cdn-icons-png.flaticon.com/512/747/747030.png?w=740&t=st=1682446148~exp=1682446748~hmac=9b9051d8b94bea126d076587d513d226244a863a1b4e70c81954f52dfc8cc70d" width="30" height="30" class="d-inline-block align-top" alt="icono">
+      CURSOPOLIS
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
