--- a/src/app/pages/acercade/acercade.component.html
+++ b/src/app/pages/acercade/acercade.component.html
@@ -10,4 +10,12 @@
 			<h1 class="text-center">Bienvenido a CURSOPOLIS</h1>
 			<p class="lead">En el equipo de CURSOPOLIS, estamos comprometidos a proporcionar acceso gratuito a una amplia gama de cursos en línea. Nuestra misión es hacer que la educación sea accesible para todos, independientemente de su ubicación, edad o nivel de ingresos.</p>
 			<p>Trabajamos con profesionales altamente calificados de diversas áreas para desarrollar y ofrecer cursos en línea de alta calidad. Todos nuestros cursos son gratuitos y están disponibles para cualquier persona con acceso a Internet.</p>
+			<br>
+			<div style="display: flex; justify-content: center; align-items: center;">
+				<img src="https://media.zenfs.com/es/business_insider_m_xico_941/8c95d1526d7016a425e689353805fd27" alt="Descripción de la imagen" style="width: 70%; height: auto;">
+			  </div>
+			  <br>
+			<p>Es una lástima que en la educación convencional todavía existan barreras que limitan el aprendizaje de los jóvenes y les impiden desarrollar todo su potencial. Desde estructuras rígidas y obsoletas hasta un enfoque excesivo en la memorización y la evaluación en lugar del aprendizaje significativo, la educación tradicional puede ser frustrante y desmotivadora para muchos estudiantes. Afortunadamente, gracias a la educación en línea gratuita, los jóvenes pueden encontrar alternativas innovadoras y accesibles que les permiten aprender de manera más efectiva y disfrutar del proceso. Es por eso que agradezco a todas las personas que visitan mis cursos y se unen a mí en este viaje de aprendizaje en línea. Juntos podemos romper las barreras de la educación tradicional y abrir nuevas oportunidades para todos.
+			</p>
+			<br>
 		</section>
