--- a/src/app/pages/ofertas/programacion.component.html
+++ b/src/app/pages/ofertas/programacion.component.html
@@ -2,17 +2,21 @@
 <div class="accordion accordion-flush justify-content-around container-fluid p-4" id="accordionFlushExample">
   <div class="accordion-item">
     <div *ngFor="let curso of cursos">
-      <h2 class="accordion-header text-center" id="flush-headingOne">
-        <button class="accordion-button collapsed panel-title" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+      <h2 class="accordion-header text-center">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" attr.data-bs-target="#a{{curso.id}}">
           <div class="centrar">
           <h1>{{curso.titulo}}</h1> 
           </div>
         </button>
       </h2>
-      <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+      
+      <div id="a{{curso.id}}" class="accordion-collapse collapse">
+        <br>
         <div class="accordion-body">
-          <img src="{{curso.imagen}}" class="card-img-top" alt="Descripción de la imagen">
-          
+          <div style="display: flex; justify-content: center; align-items: center;">
+            <img src="{{curso.imagen}}" alt="Descripción de la imagen" style="width: 70%; height: auto;">
+          </div>
+          <br>
           <p>
            {{curso.descripcion}}
           </p>
